# taskstubs

./: CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
TimerPlugin/: CMakeLists.txt  Plugin.cpp  Plugin.hpp  TaskTimer.cpp  TaskTimer.hpp  ToolAPI.hpp  tasktimer.h  tool_api.h
ToolExample/: CMakeLists.txt  MyTool.cpp  my_tool.c
analysis/: critical-path.py
examples/: CMakeLists.txt  main.c  main.cpp
share/pkgconfig/: TASKSTUBS.pc.in
timer_plugin/: CMakeLists.txt  plugin.c  plugin.h  tasktimer.c  tasktimer.h  tool_api.h
tool_example/: CMakeLists.txt  my_tool.c
tool_examples/: CMakeLists.txt  my_tool.c  nvtx_tool.cpp  roctx_tool.cpp
